--- a/estilo/style.css
+++ b/estilo/style.css
@@ -35,7 +35,6 @@ div{
 
 nav{
     background-color: darkred;
-    padding: 5px;
     box-shadow: 0px 5px 5px rgba(44, 0, 0, 0.274);
 }
 nav a{
@@ -51,6 +50,11 @@ nav a{
 nav a:hover{
     background-color: white;
     color: darkred;
+}
+a.atual{
+    background-color: white;
+    color: darkred;
+    border-radius: 0%;
 }
 
 
