--- a/estilo/style.css
+++ b/estilo/style.css
@@ -2,13 +2,14 @@
 *{
     margin: 0px;
     padding: 0px;
-    transition-duration: 0.5s;
+    transition-duration: 1s;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 
 body{
-    max-height: 100vh;
+    min-height: 100vh;
+    background-image: linear-gradient(to bottom,red,darkred);
 }
 
 
@@ -45,13 +46,17 @@ nav a{
     display: inline-block;
     margin: auto;
     text-align: justify;
-    border-radius: 15px;
 }
 nav a:hover{
-    background-color: white;
-    color: darkred;
+    background-color: red;
+    color: white;
 }
 a.atual{
+    background-color: white;
+    color: darkred;
+    border-radius: 0%;
+}
+a.atual:hover{
     background-color: white;
     color: darkred;
     border-radius: 0%;
@@ -63,6 +68,8 @@ main{
     max-width: 1400px;
     margin: auto;
     padding: 10px;
+    border-radius: 15px;
+    border: 5px solid red;
 }
 main h1{
     color: darkred;
@@ -102,5 +109,4 @@ footer{
     padding: 10px;
     text-align: center;
     text-indent: 20px;
-    box-shadow: 0px 5px 5px rgba(44, 0, 0, 0.274);
 }
