--- a/estilo/style.css
+++ b/estilo/style.css
@@ -70,6 +70,7 @@ main{
     padding: 10px;
     border-radius: 15px;
     border: 5px solid red;
+    box-shadow: 0px 5px 5px rgba(44, 0, 0, 0.274);
 }
 main h1{
     color: darkred;
