--- a/estilo/style.css
+++ b/estilo/style.css
@@ -19,7 +19,7 @@ header{
     box-shadow: 0px 5px 5px rgba(44, 0, 0, 0.274);
 }
 header img{
-    border-radius: 80px;
+    border-radius: 20px;
     max-height: 100px;
 }
 header h1{
@@ -55,6 +55,7 @@ a.atual{
     background-color: white;
     color: darkred;
     border-radius: 0%;
+    font-weight: bolder;
 }
 a.atual:hover{
     background-color: white;
@@ -65,11 +66,11 @@ a.atual:hover{
 
 main{
     background-color: white;
-    max-width: 1400px;
+    max-width: 1350px;
     margin: auto;
     padding: 10px;
     border-radius: 15px;
-    border: 5px solid red;
+    border: 3px solid red;
     box-shadow: 0px 5px 5px rgba(44, 0, 0, 0.274);
 }
 main h1{
@@ -109,5 +110,5 @@ footer{
     color: white;
     padding: 10px;
     text-align: center;
-    text-indent: 20px;
+    box-shadow: 0px 5px 5px rgba(44, 0, 0, 0.274);
 }
