--- a/estilo/style.css
+++ b/estilo/style.css
@@ -18,34 +18,46 @@ header{
     padding: 10px;
     box-shadow: 0px 5px 5px rgba(44, 0, 0, 0.274);
 }
-header img{
-    border-radius: 20px;
-    max-height: 100px;
-}
 header h1{
     color: darkred;
     font-size: 3em;
 }
-
-
-div{
-    display: inline-block;
+header div{
+    display: flex;
+    justify-content: center; 
+    align-items: center;
     padding: 10px;
+}
+header div.container{
+    position: relative;
+    max-width: 1500px;
+    height: 50px;
+}
+header div.conteudo{
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+}
+header div img{
+    max-height: 50px;
+    max-width: 50px;
 }
 
 
 nav{
     background-color: darkred;
     box-shadow: 0px 5px 5px rgba(44, 0, 0, 0.274);
+    text-align: center;
 }
 nav a{
     text-decoration: none;
     color: white;
-    padding: 5px 10px 5px 5px;
+    padding: 5px;
     font-variant: small-caps;
     display: inline-block;
     margin: auto;
-    text-align: justify;
+    text-align: center;
 }
 nav a:hover{
     background-color: red;
@@ -55,7 +67,6 @@ a.atual{
     background-color: white;
     color: darkred;
     border-radius: 0%;
-    font-weight: bolder;
 }
 a.atual:hover{
     background-color: white;
