--- a/estilo/style.css
+++ b/estilo/style.css
@@ -31,19 +31,30 @@ nav a:hover{
     background-color: red;
     color: white;
 }
-a.atual{
+nav a.atual{
     background-color: darkred;
     color: white;
 }
-a.atual:hover{
+nav a.atual:hover{
     background-color: darkred;
     color: white;
 }
 nav img{
-    display: inline-block;
-    max-width: 30px;
-    max-height: 30px;
-    padding: 5px;
+    max-width: 100%;
+    max-height: 100%;
+}
+nav div.container{
+    background-color: green;
+    position: relative;
+    min-height: 100px;
+    max-width: 100px;
+    display: block;
+}
+nav div.conteudo{
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
 }
 
 
@@ -71,10 +82,6 @@ main p, main li{
 }
 main>ul>li>ol>li{
     text-indent: 50px;
-}
-img{
-    height: 100%;
-    width: 100%;
 }
 main a{
     text-decoration: none;
