--- a/estilo/style.css
+++ b/estilo/style.css
@@ -2,30 +2,34 @@
 *{
     margin: 0px;
     padding: 0px;
-    transition-duration: 1s;
+    transition-duration: 0.7s;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 
 body{
     min-height: 100vh;
-    background-image: linear-gradient(to bottom,red,darkred);
+    background-image: linear-gradient(135deg,red,darkred);
 }
 
 
 nav{
     background-color: white;
     box-shadow: 0px 5px 5px rgba(44, 0, 0, 0.274);
-    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 5px;
+    max-height: 50px;
 }
 nav a{
     text-decoration: none;
     color: darkred;
-    padding: 5px;
     font-variant: small-caps;
     display: inline-block;
     margin: auto;
     text-align: center;
+    padding: 5px;
 }
 nav a:hover{
     background-color: red;
@@ -40,15 +44,15 @@ nav a.atual:hover{
     color: white;
 }
 nav img{
-    max-width: 100%;
     max-height: 100%;
+    max-width: 100%;
 }
 nav div.container{
-    background-color: green;
     position: relative;
-    min-height: 100px;
-    max-width: 100px;
-    display: block;
+    justify-content: center;
+    align-items: center; 
+    padding: 50px;
+
 }
 nav div.conteudo{
     position: absolute;
