--- a/estilo/style.css
+++ b/estilo/style.css
@@ -6,7 +6,9 @@
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
-
+:root{
+    --cor01:rgb(99,100,102);
+}
 body{
     min-height: 100vh;
     /*background-image: linear-gradient(135deg,red,darkred);*/
