--- a/estilo/style.css
+++ b/estilo/style.css
@@ -17,7 +17,7 @@ body{
 
 nav{
     background-color: white;
-    /*box-shadow: 0px 5px 5px rgba(44, 0, 0, 0.274);*/
+    box-shadow: 0px 5px 5px rgba(44, 0, 0, 0.274);
     display: flex;
     justify-content: center;
     align-items: center;
