Fixando navegador no topo da pagina

--- a/estilo/style.css
+++ b/estilo/style.css
@@ -12,6 +12,7 @@
 body{
     min-height: 100vh;
     /*background-image: linear-gradient(135deg,red,darkred);*/
+    position: relative;
 }
 
 
@@ -23,6 +24,8 @@ nav{
     align-items: center;
     padding: 5px;
     max-height: 50px;
+    position: sticky;
+    top: -1px;
 }
 nav a{
     text-decoration: none;
