--- a/estilo/style.css
+++ b/estilo/style.css
@@ -101,7 +101,7 @@ main a{
 main a:hover{
     background-color: darkred;
     color: white;
-}
+}/*
 div.vid{
     margin: auto;
     position: relative;
@@ -112,6 +112,9 @@ div.vid video{
     top: 0%;
     left: 0%;
     height: 100%;
+    width: 100%;
+}*/
+video{
     width: 100%;
 }
 
