--- a/estilo/style.css
+++ b/estilo/style.css
@@ -11,15 +11,14 @@
 }
 body{
     min-height: 100vh;
-    /*background-image: linear-gradient(135deg,red,darkred);*/
     position: relative;
+    background-color: whitesmoke;
 }
 
 
 nav{
     background-color: white;
     box-shadow: 0px 5px 5px rgba(44, 0, 0, 0.274);
-    display: flex;
     justify-content: center;
     align-items: center;
     padding: 5px;
@@ -68,7 +67,6 @@ nav div.conteudo{
 
 
 main{
-    background-color: white;
     max-width: 1300px;
     margin: auto;
     padding: 10px;
@@ -105,7 +103,8 @@ main a:hover{
 div.vid{
     margin: auto;
     position: relative;
-    padding-bottom: 56.4%;
+    padding-bottom: 44%;
+    background-color: whitesmoke;
 }
 div.vid video{
     position: absolute;
@@ -118,6 +117,7 @@ div.vid video{
 
 footer{
     background-color: darkred;
+    min-height: 200px;
     color: white;
     padding: 10px;
     text-align: center;
