--- a/estilo/style.css
+++ b/estilo/style.css
@@ -17,23 +17,22 @@ body{
 
 
 nav{
+    height: 50px;
     background-color: white;
-    box-shadow: 0px 5px 5px rgba(44, 0, 0, 0.274);
-    justify-content: center;
-    align-items: center;
-    padding: 5px;
-    max-height: 50px;
+    box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.397);
     position: sticky;
     top: -1px;
+    margin: auto;
 }
 nav a{
     text-decoration: none;
     color: darkred;
     font-variant: small-caps;
-    display: inline-block;
-    margin: auto;
-    text-align: center;
     padding: 5px;
+    text-align: end;
+    margin: auto;
+    text-align: justify;
+    display: inline-block;
 }
 nav a:hover{
     background-color: red;
@@ -48,22 +47,21 @@ nav a.atual:hover{
     color: white;
 }
 nav img{
-    max-height: 100%;
-    max-width: 100%;
-}
+    max-height: 50px;
+    display: inline-block;
+    align-items: start;
+}/*
 nav div.container{
     position: relative;
-    justify-content: center;
-    align-items: center; 
     padding: 50px;
-
+    display: inline-block;
 }
 nav div.conteudo{
     position: absolute;
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
-}
+}*/
 
 
 main{
