--- a/estilo/style.css
+++ b/estilo/style.css
@@ -17,22 +17,22 @@ body{
 
 
 nav{
-    height: 50px;
+    min-height: 50px;
     background-color: white;
     box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.397);
     position: sticky;
     top: -1px;
     margin: auto;
+    text-align: center;
+    line-height: 50px;
 }
 nav a{
     text-decoration: none;
     color: darkred;
     font-variant: small-caps;
-    padding: 5px;
-    text-align: end;
-    margin: auto;
-    text-align: justify;
+    padding: 5px 20px;
     display: inline-block;
+    vertical-align: middle; 
 }
 nav a:hover{
     background-color: red;
@@ -49,19 +49,9 @@ nav a.atual:hover{
 nav img{
     max-height: 50px;
     display: inline-block;
-    align-items: start;
-}/*
-nav div.container{
-    position: relative;
-    padding: 50px;
-    display: inline-block;
+    padding: 5px;
+    vertical-align: middle;
 }
-nav div.conteudo{
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
-}*/
 
 
 main{
@@ -101,7 +91,7 @@ main a:hover{
 div.vid{
     margin: auto;
     position: relative;
-    padding-bottom: 44%;
+    padding-bottom: 44.102%;
     background-color: whitesmoke;
 }
 div.vid video{
