--- a/estilo/style.css
+++ b/estilo/style.css
@@ -2,7 +2,6 @@
 *{
     margin: 0px;
     padding: 0px;
-    transition-duration: 0.7s;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
@@ -23,8 +22,8 @@ nav{
     position: sticky;
     top: -1px;
     margin: auto;
-    text-align: center;
     line-height: 50px;
+    text-align: center;
 }
 nav a{
     text-decoration: none;
@@ -32,7 +31,8 @@ nav a{
     font-variant: small-caps;
     padding: 5px 20px;
     display: inline-block;
-    vertical-align: middle; 
+    vertical-align: middle;
+    transition-duration: 0.7s;
 }
 nav a:hover{
     background-color: red;
@@ -49,8 +49,9 @@ nav a.atual:hover{
 nav img{
     max-height: 50px;
     display: inline-block;
-    padding: 5px;
+    padding: 5px 20px;
     vertical-align: middle;
+    padding-right: 20vw;
 }
 
 
@@ -91,7 +92,7 @@ main a:hover{
 div.vid{
     margin: auto;
     position: relative;
-    padding-bottom: 44.102%;
+    padding-bottom: 91.83vh;
     background-color: whitesmoke;
 }
 div.vid video{
@@ -109,5 +110,9 @@ footer{
     color: white;
     padding: 10px;
     text-align: center;
-    box-shadow: 0px 5px 5px rgba(44, 0, 0, 0.274);
+    box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.397);
+}
+
+.teste{
+    color: blue;
 }
