--- a/estilo/style.css
+++ b/estilo/style.css
@@ -49,13 +49,13 @@ nav a.atual:hover{
 nav img{
     max-height: 50px;
     display: inline-block;
-    padding: 5px 20px;
+    padding: 5px;
     vertical-align: middle;
     padding-right: 19.5vw;
 }
 nav a.image{
     background-color: white;
-    padding: 0px;
+    padding: 0%;
 }
 nav a.image:hover{
     background-color: white;
