--- a/estilo/style.css
+++ b/estilo/style.css
@@ -112,15 +112,15 @@ div.vid video{
 div.produtoA{
     display: inline-block;
     width: fit-content;
-    background-color: red;
 }
 div.produtoB{
     display: inline-block;
-    background-color: blue;
 }
 iframe{
     width: 100%;
     background-color: white;
+    border: 2px solid black;
+    overflow-x: auto;
 }
 
 
