--- a/estilo/style.css
+++ b/estilo/style.css
@@ -29,7 +29,7 @@ nav a{
     text-decoration: none;
     color: darkred;
     font-variant: small-caps;
-    padding: 5px 20px;
+    padding: 5px 10px;
     display: inline-block;
     vertical-align: middle;
     transition-duration: 0.7s;
@@ -50,15 +50,15 @@ nav img{
     max-height: 50px;
     display: inline-block;
     vertical-align: middle;
-    padding: 0px 50px;
+    padding: 0px 20px;
 }
 nav a.image{
     background-color: white;
-    padding: 0px 50px;
+    padding: 0px 20px;
 }
 nav a.image:hover{
     background-color: white;
-    padding: 0px 50px;
+    padding: 0px 20px;
 }
 
 
@@ -76,15 +76,22 @@ main h1{
     padding: 10px;
     font-variant: small-caps;
 }
-main p, main li{
+main p{
     text-align: justify;
-    text-indent: 20px;
+    text-indent: 30px;
+    padding: 20px;
+    line-height: 1em;
+    list-style-position: inside;
+}
+main li{
+    text-align: justify;
+    text-indent: 30px;
     padding: 10px;
     line-height: 1em;
     list-style-position: inside;
 }
-main>ul>li>ol>li{
-    text-indent: 50px;
+main ul,main ol{
+    padding: 20px;
 }
 main a{
     text-decoration: none;
@@ -114,12 +121,13 @@ div.vid video{
 }
 div.produtoA{
     display: inline-block;
-    width: 280px;
+    max-width: 280px;
     vertical-align: top;
 }
 div.produtoB{
     display: inline-block;
-    width: 1000px;
+    max-width: 1000px;
+    min-width: 900px;
     height: 500px;
     vertical-align: middle;
 }
