--- a/estilo/style.css
+++ b/estilo/style.css
@@ -54,19 +54,16 @@ nav img{
 }
 nav a.image{
     background-color: white;
-    padding: 0px 20px;
+    padding: 0px 100px 0px 10px;
 }
 nav a.image:hover{
     background-color: white;
-    padding: 0px 20px;
 }
 
 
 main{
-    max-width: 1300px;
+    max-width: 1000px;
     margin: auto;
-    padding: 10px;
-    border-radius: 15px;
     /*border: 2px solid red;
     box-shadow: 0px 5px 5px rgba(44, 0, 0, 0.274);*/
 }
@@ -76,28 +73,28 @@ main h1{
     padding: 10px;
     font-variant: small-caps;
 }
+main h2{
+    color: darkred;
+    text-align: center;
+    padding: 10px;
+}
 main p{
     text-align: justify;
-    text-indent: 30px;
-    padding: 10px 25px;
+    text-indent: 20px;
+    padding: 10px;
     line-height: 1em;
-    list-style-position: inside;
 }
 main li{
     text-align: justify;
-    text-indent: 30px;
-    padding: 10px 25px;
+    padding: 10px 20px;
     line-height: 1em;
     list-style-position: inside;
-}
-main ul,main ol{
-    padding: 10px;
 }
 main a{
     text-decoration: none;
     color: darkred;
     padding: 10px 0px;
-    border-radius: 10px;
+    border-radius: 15px;
 }
 main a:hover{
     background-color: darkred;
@@ -105,8 +102,8 @@ main a:hover{
 }
 main a::after{
     content: " [link]";
-    font-size: 0.8em;
-}
+    font-size: 0.7em;
+}/*
 div.vid{
     margin: auto;
     position: relative;
@@ -118,6 +115,11 @@ div.vid video{
     left: 0%;
     height: 100%;
     width: 100%;
+}*/
+video.vid{
+    width: 100%;
+    margin: auto;
+    align-items: center;
 }
 div.produtoA{
     display: inline-block;
@@ -126,16 +128,30 @@ div.produtoA{
 }
 div.produtoB{
     display: inline-block;
-    max-width: 1000px;
-    min-width: 900px;
+    width: 650px;
+    height: 600px;
+    vertical-align: top;
+}
+div.produtoC{
+    display: inline-block;
+    width: 47%;
     height: 500px;
-    vertical-align: middle;
+    vertical-align: top;
+    padding: 10px;
+}
+div.produtoD{
+    display: inline-block;
+    width: 100%;
+    height: 900px;
+    vertical-align: top;
+    padding: 10px;
 }
 iframe{
     width: 100%;
     height: 100%;
     border: 2px solid black;
     overflow-x: auto;
+    background-color: white;
 }
 
 
