--- a/estilo/style.css
+++ b/estilo/style.css
@@ -2,7 +2,7 @@
 *{
     margin: 0px;
     padding: 0px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: 'Times New Roman', Times, serif;
 }
 
 :root{
@@ -26,6 +26,7 @@ nav{
     text-align: center;
 }
 nav a{
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     text-decoration: none;
     color: darkred;
     font-variant: small-caps;
@@ -70,6 +71,7 @@ main h1{
     text-align: center;
     padding: 10px;
     font-variant: small-caps;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 main h2{
     color: darkred;
@@ -128,21 +130,14 @@ div.produtoA{
 }
 div.produtoB{
     display: inline-block;
-    width: 650px;
+    width: 600px;
     height: 600px;
     vertical-align: top;
 }
-div.produtoC{
+div.arquivopdf{
     display: inline-block;
-    width: 47%;
-    height: 500px;
-    vertical-align: top;
-    padding: 10px;
-}
-div.produtoD{
-    display: inline-block;
-    width: 100%;
-    height: 900px;
+    width: 99%;
+    height: 400px;
     vertical-align: top;
     padding: 10px;
 }
