--- a/estilo/style.css
+++ b/estilo/style.css
@@ -78,6 +78,12 @@ main h2{
     text-align: justify;
     padding: 10px;
 }
+main h3{
+    color: black;
+    text-align: justify;
+    padding: 10px;
+    font-size: 1em;
+}
 main p{
     text-align: justify;
     text-indent: 20px;
