--- a/estilo/style.css
+++ b/estilo/style.css
@@ -63,7 +63,7 @@ nav a.image:hover{
 
 
 main{
-    max-width: 1200px;
+    max-width: 1100px;
     margin: auto;
 }
 main h1{
@@ -161,7 +161,7 @@ div.arquivopdf{
     width: 100%;
     height: 400px;
     vertical-align: top;
-    padding: 10px;
+    padding: 10px 0px;
 }
 iframe{
     width: 100%;
