--- a/estilo/style.css
+++ b/estilo/style.css
@@ -63,7 +63,7 @@ nav a.image:hover{
 
 
 main{
-    max-width: 1100px;
+    max-width: 1000px;
     margin: auto;
 }
 main h1{
@@ -75,23 +75,23 @@ main h1{
 }
 main h2{
     color: darkred;
-    text-align: justify;
+    text-align: left;
     padding: 10px;
 }
 main h3{
     color: darkred;
-    text-align: justify;
+    text-align: left;
     padding: 10px;
     font-size: 1em;
 }
 main p{
-    text-align: justify;
+    text-align: left;
     text-indent: 20px;
     padding: 10px;
     line-height: 1em;
 }
 main li{
-    text-align: justify;
+    text-align: left;
     text-indent: 20px;
     padding: 10px;
     line-height: 1em;
@@ -146,12 +146,13 @@ div.container{
 }
 div.produtoA{
     display: inline-block;
-    width: 300px;
+    max-width: 300px;
     vertical-align: top;
 }
 div.produtoB{
     display: inline-block;
-    width: 700px;
+    max-width: 700px;
+    width: 99%;
     height: 600px;
     vertical-align: top;
 }
@@ -166,7 +167,7 @@ div.arquivopdf{
 iframe{
     width: 100%;
     height: 100%;
-    border: 2px solid black;
+    border: 2px solid darkred;
     overflow-x: auto;
     background-color: white;
 }
@@ -183,4 +184,5 @@ footer{
 
 .teste{
     color: blue;
+    background-color: yellow;
 }
