--- a/estilo/style.css
+++ b/estilo/style.css
@@ -51,14 +51,30 @@ nav img{
     max-height: 50px;
     display: inline-block;
     vertical-align: middle;
-    padding: 0px 20px;
 }
 nav a.image{
     background-color: white;
-    padding: 0px 100px 0px 10px;
+    padding: 0px;
 }
 nav a.image:hover{
     background-color: white;
+}
+@media screen and (orientation: landscape){
+    nav img{
+        padding: 0px 100px 0px 20px;
+    }
+}
+@media screen and (orientation: portrait){
+    nav img{
+        padding: 0px;
+    }
+    nav a{
+        border-radius: 20px;
+    }/*
+    main>div>div>ul>li{
+        display: inline-block;
+        padding: 10px 5px;
+    }*/
 }
 
 
@@ -106,8 +122,8 @@ main div ol, main div ul{
 main a{
     text-decoration: none;
     color: darkred;
-    padding: 10px 0px;
-    border-radius: 15px;
+    padding: 5px 0px;
+    border-radius: 9px;
 }
 main a:hover{
     background-color: darkred;
@@ -125,7 +141,7 @@ div.vid{
     position: relative;
     /*padding-bottom: 91.5vh;*/
     padding-bottom: 43vw;
-    background-image: linear-gradient(to top, black, transparent);
+    background-image: linear-gradient(to top, gray, transparent);
 }
 div.vid video{
     position: absolute;
