--- a/estilo/style.css
+++ b/estilo/style.css
@@ -1,15 +1,18 @@
 @charset "UTF-8";
+
+
 *{
     margin: 0px;
     padding: 0px;
     font-family: 'Times New Roman', Times, serif;
+    box-sizing: border-box;
 }
 
 :root{
     --cor01:rgb(99,100,102);
 }
 body{
-    min-height: 100vh;
+    height: 100vh;
     position: relative;
     background-color: whitesmoke;
 }
@@ -61,7 +64,7 @@ nav a.image:hover{
 }
 @media screen and (orientation: landscape){
     nav img{
-        padding: 0px 100px 0px 20px;
+        padding: 0px 100px 0px 0px;
     }
 }
 @media screen and (orientation: portrait){
@@ -69,7 +72,7 @@ nav a.image:hover{
         padding: 0px;
     }
     nav a{
-        border-radius: 20px;
+        border-radius: 15px;
     }/*
     main>div>div>ul>li{
         display: inline-block;
@@ -136,12 +139,23 @@ main a::after{
 main h3 a{
     color: black;
 }
+s{
+    color: darkred;
+}
 div.vid{
     margin: auto;
     position: relative;
-    /*padding-bottom: 91.5vh;*/
-    padding-bottom: 43vw;
     background-image: linear-gradient(to top, gray, transparent);
+}
+@media screen and (orientation: landscape){
+    div.vid{
+        padding-bottom: 43.6vw;
+    }
+}
+@media screen and (orientation: portrait){
+    div.vid{
+        padding-bottom: 83.5vh;
+    }
 }
 div.vid video{
     position: absolute;
@@ -168,14 +182,14 @@ div.produtoA{
 div.produtoB{
     display: inline-block;
     max-width: 700px;
-    width: 99%;
+    width: 100%;
     height: 600px;
     vertical-align: top;
 }
 div.arquivopdf{
     display: inline-block;
     text-align: center;
-    width: 99%;
+    width: 100%;
     height: 400px;
     vertical-align: top;
     padding: 10px 0px;
