--- a/estilo/style.css
+++ b/estilo/style.css
@@ -81,8 +81,8 @@ nav a.image:hover{
 
 
 main{
-    max-width: 90vw;
-    width: 100%;
+    max-width: 900px;
+    width: 90vw;
     margin: auto;
 }
 main h1{
@@ -176,13 +176,13 @@ div.container{
 }
 div.produtoA{
     display: inline-block;
-    max-width: 270px;
+    max-width: 800px;
     width: 100%;
     vertical-align: top;
 }
 div.produtoB{
     display: inline-block;
-    max-width: 700px;
+    max-width: 800px;
     width: 100%;
     height: 600px;
     vertical-align: top;
