--- a/estilo/style.css
+++ b/estilo/style.css
@@ -27,9 +27,7 @@ nav{
     margin: auto;
     line-height: 50px;
     text-align: center;
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: space-evenly;
+    align-items: center;
 }
 nav a{
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
@@ -37,11 +35,8 @@ nav a{
     color: darkred;
     font-variant: small-caps;
     padding: 5px;
-    display: inline-block;
     vertical-align: middle;
     transition-duration: 0.7s;
-    flex: auto;
-    min-width: 200px;
 }
 nav a:hover{
     background-color: red;
@@ -55,34 +50,51 @@ nav a.atual:hover{
     background-color: darkred;
     color: white;
 }
+span#burger{
+    background-color: white;
+    color: darkred;
+    display: block;
+    text-align: center;
+    padding: 10px;
+    cursor: pointer;
+    box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.397);
+}
+span#burger:hover{
+    background-color: darkred;
+    color: white;
+}
 nav img{
     max-height: 50px;
-    display: inline-block;
+    max-width: 50px;
     vertical-align: middle;
+    flex: auto;
 }
-nav a.image{
-    background-color: white;
-}
-nav a.image:hover{
-    background-color: white;
-}/*
 @media screen and (min-width: 769px){
-    nav img{
-        padding: 0px 100px 0px 0px;
+    nav{
+        display: flex;
+        flex-flow: row wrap;
+        justify-content: space-evenly;
+    }
+    nav a{
+        flex: auto;
+        min-width: 200px;
+    }
+    span#burger{
+        display: none;
     }
 }
 @media screen and (max-width: 768px){
-    nav img{
-        padding: 0px;
+    nav{
+        display: none;
     }
     nav a{
-        border-radius: 15px;
+        display: block;
     }
-    main>div>div>ul>li{
-        display: inline-block;
-        padding: 10px 5px;
+    
+    span#burger{
+        display: block;
     }
-}*/
+}
 
 
 main{
