Javascript para frames que aparecem ao clicar em todos frames da pagina SISTEMA

--- a/estilo/style.css
+++ b/estilo/style.css
@@ -162,6 +162,7 @@ main a{
     color: darkred;
     padding: 5px 0px;
     border-radius: 9px;
+    transition-duration: 0.7s;
 }
 main a:hover{
     background-color: darkred;
