--- a/estilo/style.css
+++ b/estilo/style.css
@@ -81,6 +81,7 @@ nav a.image:hover{
         display: flex;
         flex-flow: row wrap;
         justify-content: space-evenly;
+        align-items: center;
     }
     nav a{
         flex: auto;
