--- a/estilo/style.css
+++ b/estilo/style.css
@@ -11,7 +11,7 @@
 :root{
     --cor01:rgb(99,100,102);
 }
-body{
+body,html{
     height: 100vh;
     position: relative;
     background-color: whitesmoke;
@@ -117,6 +117,7 @@ nav a.image:hover{
 
 
 main{
+    padding-top: 30px;
     max-width: 900px;
     min-width: 350px;
     width: 90vw;
@@ -174,9 +175,6 @@ main a:hover{
 main a::after{
     content: " [link]";
     font-size: 0.7em;
-}
-main h3 a{
-    color: black;
 }
 s{
     color: darkred;
