--- a/estilo/style.css
+++ b/estilo/style.css
@@ -14,7 +14,7 @@
 body,html{
     height: 100vh;
     position: relative;
-    background-color: whitesmoke;
+    background-color:whitesmoke;
 }
 
 header{
@@ -122,6 +122,7 @@ main{
     min-width: 350px;
     width: 90vw;
     margin: auto;
+    border-radius: 20px;
 }
 main h1{
     color: darkred;
@@ -181,6 +182,7 @@ s{
 }
 div.vid{
     margin: auto;
+    width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
