--- a/estilo/style.css
+++ b/estilo/style.css
@@ -79,13 +79,14 @@ nav a.image:hover{
 @media screen and (min-width: 769px){
     nav{
         display: flex;
-        flex-flow: row wrap;
+        flex-flow: row nowrap;
         justify-content: space-evenly;
         align-items: center;
     }
     nav a{
         flex: auto;
-        min-width: 200px;
+        flex-grow: 1;
+        flex-shrink: 1;
     }
     span#burger{
         display: none;
