--- a/estilo/style.css
+++ b/estilo/style.css
@@ -70,12 +70,6 @@ header img{
     vertical-align: middle;
     flex: auto;
 }
-nav a.image{
-    background-color: white;
-}
-nav a.image:hover{
-    background-color: white;
-}
 @media screen and (min-width: 769px){
     nav{
         display: flex;
@@ -88,10 +82,7 @@ nav a.image:hover{
         flex-grow: 1;
         flex-shrink: 1;
     }
-    span#burger{
-        display: none;
-    }
-    div.image2{
+    menu{
         display: none;
     }
 }
@@ -105,10 +96,10 @@ nav a.image:hover{
     span#burger{
         display: block;
     }
-    nav a.image{
+    nav img{
         display: none;
     }
-    div.image2{
+    menu img{
         display: block;
         max-height: 50px;
         max-width: 50px;
