--- a/estilo/style.css
+++ b/estilo/style.css
@@ -57,7 +57,6 @@ span#burger{
     text-align: center;
     padding: 10px;
     cursor: pointer;
-    box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.334);
     border: 1px solid darkred;
 }
 span#burger:hover{
@@ -68,7 +67,6 @@ header img{
     max-height: 50px;
     max-width: 50px;
     vertical-align: middle;
-    flex: auto;
 }
 @media screen and (min-width: 769px){
     nav{
@@ -81,6 +79,9 @@ header img{
         flex: auto;
         flex-grow: 1;
         flex-shrink: 1;
+    }
+    nav img{
+        margin: 0px 50px;
     }
     menu{
         display: none;
@@ -109,11 +110,12 @@ header img{
 
 
 main{
-    padding-top: 30px;
     max-width: 900px;
     min-width: 350px;
     width: 90vw;
     margin: auto;
+    margin-top: 30px;
+    margin-bottom: 30px;
     border-radius: 20px;
 }
 main h1{
@@ -135,13 +137,13 @@ main h3{
     font-size: 1em;
 }
 main p{
-    text-align: left;
+    text-align: justify;
     text-indent: 20px;
     padding: 10px;
     line-height: 1em;
 }
 main li{
-    text-align: left;
+    text-align: justify;
     text-indent: 20px;
     padding: 10px;
     line-height: 1em;
@@ -163,7 +165,7 @@ main a:hover{
     background-color: darkred;
     color: white;
     cursor: pointer;
-    transition-duration: 0.5s;
+    transition-duration: 0.7s;
 }
 main a::after{
     content: " [link]";
