--- a/estilo/style.css
+++ b/estilo/style.css
@@ -77,6 +77,7 @@ header img{
     }
     nav img{
         flex: 1 1 auto;
+        margin: 0px 20px;
     }
     nav div{
         flex: 1 1 auto;
@@ -86,7 +87,7 @@ header img{
         align-items: center;
     }
     nav div a{
-        flex: 0 1 190px;
+        flex: 0 1 180px;
     }
     menu{
         display: none;
