--- a/estilo/style.css
+++ b/estilo/style.css
@@ -69,11 +69,18 @@ header img{
     vertical-align: middle;
 }
 @media screen and (min-width: 769px){
-    nav{
+    nav.navprincipal{
         display: flex;
         flex-flow: row nowrap;
         justify-content: space-between;
         align-items: center;
+    }
+    nav.navproduto{
+        display: flex;
+        flex-flow: row nowrap;
+        justify-content: space-evenly;
+        align-items: center;
+        background-color: darkred;
     }
     nav img{
         flex: 1 1 auto;
@@ -86,8 +93,11 @@ header img{
         justify-content: center;
         align-items: center;
     }
-    nav div a{
+    nav.navprincipal>div>a{
         flex: 0 1 180px;
+    }
+    nav.navproduto>a{
+        flex: 1 1 180px;
     }
     menu{
         display: none;
@@ -204,34 +214,6 @@ div.vid{
     div.vid video{
         width: 100%;
     }
-}
-div.container{
-    text-align: center;
-    width: 100%;
-}
-div.produtoA{
-    padding: 0px;
-    display: inline-block;
-    max-width: 800px;
-    width: 100%;
-    vertical-align: top;
-}
-div.produtoA ul{
-    padding: 0px;
-    list-style-type: none;
-    text-align: center;
-}
-div.produtoA li{
-    padding: 15px 0px;
-    display: inline-block;
-}
-div.produtoB{
-    padding: 0px;
-    display: inline-block;
-    max-width: 800px;
-    width: 100%;
-    height: 600px;
-    vertical-align: top;
 }
 div.arquivopdf{
     display: none;
