--- a/estilo/style.css
+++ b/estilo/style.css
@@ -30,7 +30,7 @@ nav{
     text-align: center;
     align-items: center;
 }
-nav a{
+nav a,nav.navprincipal div p{
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     text-decoration: none;
     color: darkred;
@@ -43,7 +43,7 @@ nav a:hover{
     color: white;
     transition-duration: 0.7s;
 }
-nav a.atual{
+nav a.atual,nav.navprincipal div p{
     background-color: darkred;
     color: white;
 }
@@ -93,8 +93,8 @@ header img{
         justify-content: center;
         align-items: center;
     }
-    nav.navprincipal>div>a{
-        flex: 0 1 180px;
+    nav.navprincipal div a,nav.navprincipal div p{
+        flex: 0 1 200px;
     }
     nav.navproduto>a{
         flex: 1 1 180px;
