--- a/estilo/style.css
+++ b/estilo/style.css
@@ -80,6 +80,7 @@ header img{
         flex-flow: row nowrap;
         justify-content: space-evenly;
         align-items: center;
+        border-top: 2px solid darkred;
     }
     nav img{
         flex: 1 1 auto;
@@ -243,33 +244,36 @@ iframe{
     overflow-x: auto;
     background-color: white;
 }
+
+
 table{
     width: 100%;
     border-collapse: collapse;
     margin: auto;
+    background-color: white;
+    border: 2px solid darkred;
 }
 table thead{
-    position: relative;
     background-color: darkred;
     color: white;
 }
-table tbody{
-    position: sticky;
-    top: -1px;
-}
 table col.clink{
-    text-align: center;
-}
-table col.cdesk{
-    text-align: justify;
+    width: 100px;
 }
 table th,table td{
-    border: 2px solid darkred;
     padding: 10px;
     vertical-align: middle;
 }
+table th{
+    text-align: center;
+    font-variant: small-caps;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+table td{
+    text-align: justify;
+}
 table tbody>tr:nth-child(2n){
-    background-color: lightgrey;
+    background-color: lightgray;
 }
 
 
