--- a/estilo/style.css
+++ b/estilo/style.css
@@ -144,8 +144,8 @@ main{
     min-width: 350px;
     width: 90vw;
     margin: auto;
-    margin-top: 30px;
-    margin-bottom: 30px;
+    padding-top: 30px;
+    padding-bottom: 30px;
     border-radius: 20px;
 }
 main h1{
@@ -248,10 +248,10 @@ iframe{
 
 table{
     width: 100%;
-    border-collapse: collapse;
     margin: auto;
     background-color: white;
     border: 2px solid darkred;
+    border-collapse: collapse;
 }
 table thead{
     background-color: darkred;
@@ -259,6 +259,7 @@ table thead{
 }
 table col.clink{
     width: 100px;
+    border: 2px solid darkred;
 }
 table th,table td{
     padding: 10px;
@@ -285,6 +286,7 @@ footer{
     text-align: center;
     box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.397);
 }
+
 
 .teste{
     color: blue;
