--- a/estilo/style.css
+++ b/estilo/style.css
@@ -4,7 +4,7 @@
 *{
     margin: 0px;
     padding: 0px;
-    font-family: 'Times New Roman', Times, serif;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     box-sizing: border-box;
 }
 
@@ -31,30 +31,26 @@ nav{
     align-items: center;
 }
 nav a,nav.navprincipal div p{
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     text-decoration: none;
     color: darkred;
-    font-variant: small-caps;
     padding: 5px;
     vertical-align: middle;
 }
 nav a:hover, nav.navproduto a:hover{
     background-color: red;
     color: white;
+    cursor: pointer;
     transition-duration: 0.7s;
 }
 nav a.atual, nav a.atual:hover, nav.navproduto a{
     background-color: darkred;
     color: white;
-}
-nav.navprincipal div p{
-    background-color: gray;
-    color: white;
     cursor: default;
 }
-nav.navproduto a.atual,nav.navproduto a.atual:hover{
-    background-color: white;
-    color: darkred;
+nav.navprincipal div p,nav.navproduto a.atual,nav.navproduto a.atual:hover{
+    background-color: lightgray;
+    color: black;
+    cursor: default;
 }
 span#burger{
     color: darkred;
@@ -99,10 +95,10 @@ header img{
         align-items: center;
     }
     nav.navprincipal div a,nav.navprincipal div p{
-        flex: 0 1 200px;
+        flex: 0 1 250px;
     }
     nav.navproduto>a{
-        flex: 1 1 180px;
+        flex: 1 1 auto;
     }
     menu{
         display: none;
