--- a/estilo/style.css
+++ b/estilo/style.css
@@ -153,8 +153,6 @@ main h1{
     color: darkred;
     text-align: center;
     padding: 10px;
-    font-variant: small-caps;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 main h2{
     color: darkred;
@@ -169,22 +167,18 @@ main h3{
 }
 main p{
     text-align: justify;
-    text-indent: 20px;
+    text-indent: 10px;
     padding: 10px;
     line-height: 1em;
 }
 main li{
     text-align: justify;
-    text-indent: 20px;
     padding: 10px;
     line-height: 1em;
     list-style-position: inside;
 }
 main ol, main ul{
-    padding: 0px 30px;
-}
-main div ol, main div ul{
-    padding: 0px;
+    padding: 0px 0px 0px 30px;
 }
 main a{
     text-decoration: none;
