--- a/estilo/style.css
+++ b/estilo/style.css
@@ -8,19 +8,21 @@
     box-sizing: border-box;
 }
 
+
 :root{
     --cor01:rgb(99,100,102);
 }
 body,html{
     height: 100vh;
-    position: relative;
     background-color:whitesmoke;
 }
 
 header{
     background-color: white;
-    position: sticky;
+    position: fixed;
+    width: 100%;
     top: -1px;
+    right: 0px;
     box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.334);
 }
 nav{
@@ -81,7 +83,7 @@ header img{
         flex-flow: row nowrap;
         justify-content: space-evenly;
         align-items: center;
-        border-top: 2px solid darkred;
+        border-top: 3px solid darkred;
     }
     nav img{
         flex: 1 1 auto;
@@ -145,9 +147,12 @@ main{
     min-width: 350px;
     width: 90vw;
     margin: auto;
-    padding-top: 30px;
+    padding-top: 70px;
     padding-bottom: 30px;
     border-radius: 20px;
+}
+main.prodbody{
+    padding-top: 130px;
 }
 main h1{
     color: darkred;
@@ -205,16 +210,18 @@ s{
 }
 div.vid{
     margin: auto;
+    position: fixed;
+    bottom: 0;
     width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
-    flex-flow: row wrap;
+    flex-flow: column wrap;
     background-image: linear-gradient(to top, gray, transparent);
 }
 @media screen and (min-width: 769px){
     div.vid{
-        height: calc(100vh - 62px);
+        height: calc(100vh - 60px);
     }
     div.vid video{
         height: 100%;
@@ -256,7 +263,7 @@ table thead{
     background-color: darkred;
     color: white;
 }
-table col.clink{
+table col.clinkb1{
     width: 100px;
 }
 table th,table td{
