--- a/estilo/style.css
+++ b/estilo/style.css
@@ -147,12 +147,21 @@ main{
     min-width: 350px;
     width: 90vw;
     margin: auto;
-    padding-top: 70px;
     padding-bottom: 30px;
     border-radius: 20px;
 }
-main.prodbody{
-    padding-top: 130px;
+@media screen and (min-width: 769px){
+    main{
+        padding-top: 70px;
+    }
+    main.prodbody{
+        padding-top: 130px;
+    }
+}
+@media screen and (max-width: 768px){
+    main{
+        padding-top: 100px;
+    }
 }
 main h1{
     color: darkred;
@@ -285,10 +294,13 @@ table tbody>tr:nth-child(2n){
 footer{
     background-color: darkred;
     min-height: 200px;
+    width: 100%;
     color: white;
     padding: 10px;
     text-align: center;
     box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.397);
+    position: fixed;
+    bottom: 0;
 }
 
 
