--- a/estilo/style.css
+++ b/estilo/style.css
@@ -237,7 +237,7 @@ div.vid{
 
 
 table{
-    width: 100%;
+    width: 95%;
     margin: auto;
     background-color: white;
     border: 2px solid darkred;
@@ -247,9 +247,10 @@ table thead{
     background-color: darkred;
     color: white;
 }
-table col.clinkb1{
-    width: 100px;
-}
+/*table col.clinkb1 td{
+    width: 150px;
+    text-align: center;
+}*/
 table th,table td{
     padding: 10px;
     vertical-align: middle;
@@ -258,12 +259,14 @@ table th{
     text-align: center;
 }
 table td{
-    text-align: justify;
     border-left: 2px solid darkred;
 }
 table tbody>tr:nth-child(2n){
     background-color: lightgray;
 }
+/*table > tbody > tr > td > a{
+    align-self: center;
+}*/
 
 
 footer{
