--- a/estilo/print.css
+++ b/estilo/print.css
@@ -4,7 +4,7 @@
 *{
     margin: 0px;
     padding: 0px;
-    font-family: 'Courier New', Courier, monospace;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     box-sizing: border-box;
 }
 
@@ -40,7 +40,6 @@ main h1{
     color: black;
     text-align: center;
     padding: 5px;
-    font-variant: small-caps;
     font-size: 1.3em;
 }
 main h2{
