--- a/estilo/style.css
+++ b/estilo/style.css
@@ -20,12 +20,15 @@ body,html{
 
 header{
     background-color: white;
-    position: sticky;
+    position: fixed;
     width: 100%;
     top: 0;
     z-index: 1;
     box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.334);
     overflow-x: auto;
+}
+header.header0{
+    position: static;
 }
 nav{
     min-height: 50px;
